--- a/web/genomic_stability_model.html
+++ b/web/genomic_stability_model.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
-    <a href="https://github.com/emilydolson/memic_model" class="github-corner" aria-label="View source on Github">
+    <a href="https://github.com/emilydolson/genomic_stability_model" class="github-corner" aria-label="View source on Github">
         <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
         <path style="fill:white;" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" style="transform-origin: 130px 106px;" class="octo-arm"></path>
         <path style="fill:white;" d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" class="octo-body"></path>
@@ -28,7 +28,7 @@
 <!-- Make header -->
 <div id="banner" class="jumbotron">
 
-    <h1>Model of cancer evolution along an oxygen gradient
+    <h1>Model evolution with chaning genomic stability
         <!-- Bring up FAQ button -->
         <button class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#help" role="button" aria-expanded="false" aria-controls="help" alt="Need help? Have more questions?">
             <span title="More information" aria-hidden="true" class="oi oi-question-mark align-top"></span>
@@ -37,13 +37,11 @@
     <!-- Page dsecription -->
     <p>
         <br>
-        This is a work in progress, but eventually it will be a model of cancer cells evolving along a
-        spatial oxygen gradient. This model will be a companion to a set of laboratory experiments using 
-        <a href="https://www.pnas.org/content/114/11/2934">MEMIC plates</a>. 
+        IMO 2019 Team Green! 
     </p>
 
     <p>
-        If you have questions or want to know more, feel free to <a href="http://emilyldolson.com/contact.html">contact me</a>!
+        If you have questions or want to know more, feel free to <a href="http://emilyldolson.com/contact.html">send an e-mail</a>!
     </p>
 
 </div> <!-- Close jumbotron -->
@@ -92,31 +90,21 @@
                 <p>
                 Click the "start" button in the lower left to start the model.
                 Click "stop" at any time to pause it.
-                
-                The left box shows a map of oxygen concentration across the world (higher hue values (e.g. blue, purple, magenta) have more oxygen).
-                You can click anywhere on the map to add oxygen there.
 
-                The right box shows the phylogenetic depth (distance from original ancestor) of each cell in the world. Higher hue values are farther down
-                the tree (i.e. more generations have elapsed). Black cells are unoccupied.
+                Black cells are unoccupied.
                 </p>
 
 
                 <h4> There's something wrong with this website/I have a feature request </h4>
                 <p>
                     Great! Thanks for letting me know! You can send bugs and feature requests by 
-                    <a href="https://github.com/emilydolson/memic_model/issues">
+                    <a href="https://github.com/emilydolson/genomic_stability_model/issues">
                     making an issue on GitHub</a> (or contacting me some other way, if that's easier for you).
-                </p>
-
-                <h4> I want to help with this research! </h4>
-                <p>
-                    Fantastic! <a href="http://emilyldolson.com/contact.html">Send me an e-mail</a> and we can talk
-                    about collaboration.
                 </p>
 
                 <h4> What tools did you use to build this? </h4>
                 <p>
-                For full details, see <a href="https://github.com/emilydolson/memic_model">the GitHub repo for this site</a>. In summary, though, I used:
+                For full details, see <a href="https://github.com/emilydolson/genomic_stability_model">the GitHub repo for this site</a>. In summary, though, I used:
                 <li><a href="https://github.com/devosoft/Empirical">Empirical</a>: Using the Empirical library I was able to easily create two versions of the code for this project: 
                 a fast one for research, and this interactive one for playing with ideas and sharing with others. I wrote the whole thing in C++ and compiled the research version 
                 normally. This interactive version was compiled to highly efficient Javascript using the <a href="https://github.com/kripken/emscripten">Emscripten compiler</a>. </li>
@@ -126,24 +114,12 @@
                 And of course my trusty laptop running <a href="https://linuxmint.com/">Linux Mint</a>.
                 </p>
 
-                <h4>Who else helped make this happen?</h4>
-                <p>
-                This project is being carried out by the <a href='https://www.lerner.ccf.org/thor/scott/lab/'>Theory Division</a> at the 
-                Cleveland Clinic <a href="http://www.lerner.ccf.org/">Lerner Research Institute</a> (views expressed here are my own and do not necessarily reflect the views of 
-                Cleveland Clinic or LRI).
-                </p>
-
-                <h4>Who are you?</h4>
-                <p>
-                I'm a Postdoctoral Fellow at the Cleveland Clinic Lerner Research Institute studying evolution, ecology, and computer science. 
-                To learn more about my research, see <a href="http://www.emilyldolson.com"> my website</a>.
-                </p>
 
             </div>
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
                 <a href="https://twitter.com/emilyldolson" class="twitter-follow-button" data-show-count="false">Follow me on Twitter!</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> </li>
                 <a class="github-button" href="https://github.com/emilydolson" data-style="mega" aria-label="My Github">My Github</a> </li>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
