Added tunable gamma distribution for fitness effects

--- a/web/genomic_stability_model.html
+++ b/web/genomic_stability_model.html
@@ -28,7 +28,7 @@
 <!-- Make header -->
 <div id="banner" class="jumbotron">
 
-    <h1>Model evolution with chaning genomic stability
+    <h1>Model of evolution with changing genomic stability
         <!-- Bring up FAQ button -->
         <button class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#help" role="button" aria-expanded="false" aria-controls="help" alt="Need help? Have more questions?">
             <span title="More information" aria-hidden="true" class="oi oi-question-mark align-top"></span>
